syntax = "proto3";

option java_package = "ru.practicum.grpc.stats.collector";

import "google/protobuf/empty.proto";
import "stat/messages/user_action.proto";

service UserActionController{
  rpc CollectUserAction(stat.messages.action.UserActionProto) returns (google.protobuf.Empty);
}